--- a/multi-stage/Dockerfile-final
+++ b/multi-stage/Dockerfile-final
@@ -10,7 +10,10 @@ RUN go build -o /bin/client ./cmd/client
 FROM base AS build-server
 RUN go build -o /bin/server ./cmd/server
 
-FROM scratch AS prod
+FROM scratch AS prod-client
 COPY --from=build-client /bin/client /bin/
+ENTRYPOINT [ "/bin/client" ]
+
+FROM scratch AS prod-server
 COPY --from=build-server /bin/server /bin/
 ENTRYPOINT [ "/bin/server" ]
