--- a/swarm-app/compose.yaml
+++ b/swarm-app/compose.yaml
@@ -1,13 +1,21 @@
+# Swarm doesn't yet support the Compose Spec, so we've pinned the file format to version 3.9
+# Un-comment the version field if you get an 'unsupported Compose file version: 1.0' ERROR
+version: '3.8'
 networks:
   counter-net:
+    driver: overlay
+    driver-opts:
+      encrypted: 'yes'
 
 volumes:
   counter-vol:
   
 services:
   web-fe:
-    build: .
+    image: nigelpoulton/ddd-book:swarm-app
     command: python app.py
+    deploy:
+      replicas: 10
     ports:
       - target: 8080
         published: 5001
@@ -21,4 +29,3 @@ services:
     image: "redis:alpine"
     networks:
       counter-net:
-
