--- a/ai-compose/gpu-compose.yaml
+++ b/ai-compose/gpu-compose.yaml
@@ -1,53 +1,66 @@
-services:
-  backend:
-    image: nigelpoulton/gsd-book:chat-frontend
-    build: ./backend
-    ports:
-      - "8000:8000"
-    environment:
-      - MODEL_HOST=http://ollama:11434
-    depends_on:
-      ollama:
-        condition: service_healthy
-
-  frontend:
-    image: nigelpoulton/gsd-book:chat-backend
-    build: ./frontend
-    ports:
-      - "3000:3000"
-    environment:
-      - PORT=3000
-      - HOST=0.0.0.0
-    command: npm run start
-    depends_on:
-      - backend
-
-  ollama:
-    image: nigelpoulton/gsd-book:chat-model
-    build: ./ollama
-    ports:
-      - "11434:11434"
-    volumes:
-      - ollama_data:/root/.ollama
-    environment: 
-      - MODEL=${MODEL:-mistral:latest} # Default to mistral:latest if MODEL is not set
-    healthcheck:
-      test: ["CMD-SHELL", "curl -s http://localhost:11434/api/tags | jq -e \".models[] | select(.name == \\\"${MODEL:-mistral:latest}\\\")\" > /dev/null"]
-      interval: 10s
-      timeout: 5s
-      retries: 50
-      start_period: 600s
-    deploy:
-      resources:
-        limits:
-          memory: 8G
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
-
 volumes:
-  ollama_data:
-    name: ollama_data
+  model_data:
+
+networks:
+  internal:
+
+services:
+    frontend:
+      image: nigelpoulton/ddd-book:ai-fe
+#     build: ./frontend
+      command: npm run start
+      networks:
+        - internal
+      ports:
+        - target: 3000
+          published: 3000
+      environment:
+        - PORT=3000
+        - HOST=0.0.0.0
+      depends_on:
+        - backend
+        
+    backend:
+      image: nigelpoulton/ddd-book:ai-be
+#     build: ./backend
+      networks:
+        - internal
+      ports:
+        - target: 8000
+          published: 8000
+      environment:
+        - MODEL_HOST=http://model:11434
+      depends_on:
+        model:
+          condition: service_healthy
+
+    model:
+#     image: nigelpoulton/ddd-book:ai-model
+      build: ./model
+      networks:
+        - internal
+      ports:
+        - published: 11434
+          target: 11434
+      volumes:
+        - type: volume
+          source: model_data
+          target: /root/.ollama
+      environment: 
+        - MODEL=${MODEL:-mistral:latest} 
+      healthcheck:
+        test: ["CMD-SHELL", "curl -s http://localhost:11434/api/tags | jq -e \".models[] | select(.name == \\\"${MODEL:-mistral:latest}\\\")\" > /dev/null"]
+        interval: 10s
+        timeout: 5s
+        retries: 50
+        start_period: 900s
+      deploy:
+        resources:
+          limits:
+            memory: 8G
+          reservations:
+            devices:
+              - driver: nvidia
+                count: 1
+                capabilities: [gpu]
 
